<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/item_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_white_1000"
        android:clickable="true"
        android:elevation="5dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:ignore="NamespaceTypo"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true">

        <!--   Recycler View Item Row   -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/MainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp"
                android:weightSum="8">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:gravity="center"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/listIcon"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="4dp"
                            android:scaleType="centerInside"
                            android:background="@drawable/red_circle_border"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_repository" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingTop="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/RepoName"
                            android:layout_marginLeft="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/repo_name"
                            android:textColor="@color/md_grey_800"
                            android:textStyle="normal"
                            android:textSize="14sp"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/RepoOwner"
                            android:layout_marginLeft="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/owner_name"
                            android:textColor="@color/md_grey_800"
                            android:textStyle="normal"
                            android:textSize="14sp"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/RepoLink"
                            android:layout_marginLeft="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/repo_link"
                            android:textColor="@color/md_grey_800"
                            android:textStyle="normal"
                            android:textSize="14sp"/>


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.6"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/NumberOfStars"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/number_of_stars"
                        android:textColor="@color/md_grey_800" />

                    <TextView
                        android:id="@+id/NumberOfForks"
                        android:layout_gravity="left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_forks"
                        android:textColor="@color/md_grey_800" />

                    <TextView
                        android:id="@+id/NumberOfWatch"
                        android:layout_gravity="left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_watch"
                        android:textColor="@color/md_grey_800" />


                </LinearLayout>

            </LinearLayout>
<!--            -->
<!--            <View-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="1dp"-->
<!--                android:layout_margin="4dp"-->
<!--                android:background="@color/md_grey_700"-->
<!--                android:layout_below="@id/MainLayout"/>-->

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>